[gd_scene load_steps=9 format=3 uid="uid://cgr31q0dt6orb"]

[ext_resource type="Script" path="res://Assets/Port v2/lychee_port_2.gd" id="1_g8vfu"]
[ext_resource type="Texture2D" uid="uid://dqw7khucb6y0" path="res://Assets/Opdelt porte/lychee_port_h.png" id="1_sxa78"]
[ext_resource type="Texture2D" uid="uid://cdr00ks3qrwrb" path="res://Assets/Opdelt porte/lychee_port_v.png" id="2_eslkn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yhy0"]
size = Vector2(67, 20)

[sub_resource type="Animation" id="Animation_i7a54"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lychee_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lychee_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_klyl2"]
resource_name = "lychee_port_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lychee_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lychee_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_2yyuq"]
resource_name = "lychee_port_open_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lychee_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lychee_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_blkfh"]
_data = {
"RESET": SubResource("Animation_i7a54"),
"lychee_port_close": SubResource("Animation_klyl2"),
"lychee_port_open_2": SubResource("Animation_2yyuq")
}

[node name="lychee_port_2" type="StaticBody2D"]
script = ExtResource("1_g8vfu")

[node name="lychee_h_2" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("1_sxa78")

[node name="lychee_v_2" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("2_eslkn")

[node name="lychee_port_collision_2" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_5yhy0")

[node name="ap_lychee_2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_blkfh")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
